force-app/main/default/objects/AiAgentSessionAttachment_std__dlm/AiAgentSessionAttachment_std__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>Stores metadata and file paths for attachments linked to AI Agent Sessions.</description>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Ai Agent Session Attachment</labelOverride>
        <masterLabel>Ai Agent Session Attachment</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
        <referenceEntityName>AiAgentSessionAttachment</referenceEntityName>
    </mktDataModelAttributes>
</CustomObject>