force-app/main/default/objects/AiAgentSessionAttachment_std__dlm/fields/AiAgentSessionId__c.field-meta.xml
<CustomField>
    <fullName>AiAgentSessionId__c</fullName>
    <label>Ai Agent Session Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Ai Agent Session Id</labelOverride>
        <masterLabel>Ai Agent Session Id</masterLabel>
        <refAttrDeveloperName>AiAgentSessionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>