force-app/main/default/objects/AiAgentSessionAttachment_std__dlm/fields/ContentDocumentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentVersionId__c</fullName>
    <label>Content Document Version Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Content Document Version Id</labelOverride>
        <masterLabel>Content Document Version Id</masterLabel>
        <refAttrDeveloperName>ContentDocumentVersionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>