force-app/main/default/objects/AiAgentSessionAttachment_std__dlm/fields/CreatedTimestamp__c.field-meta.xml
<CustomField>
    <fullName>CreatedTimestamp__c</fullName>
    <label>Created Timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Created Timestamp</labelOverride>
        <masterLabel>Created Timestamp</masterLabel>
        <refAttrDeveloperName>CreatedTimestamp</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>