force-app/main/default/objects/AiAgentSessionAttachment_std__dlm/fields/FilePathName__c.field-meta.xml
<CustomField>
    <fullName>FilePathName__c</fullName>
    <label>File Path</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>File Path</labelOverride>
        <masterLabel>File Path</masterLabel>
        <refAttrDeveloperName>FilePathName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>