force-app/main/default/objects/AiAgentSessionAttachment_std__dlm/fields/KQ_AiAgentSessionId__c.field-meta.xml
<CustomField>
    <fullName>KQ_AiAgentSessionId__c</fullName>
    <label>Key Qualifier Ai Agent Session Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Ai Agent Session Id</labelOverride>
        <masterLabel>Key Qualifier Ai Agent Session Id</masterLabel>
        <refAttrDeveloperName>KQ_AiAgentSessionId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>