force-app/main/default/objects/AiAgentSessionAttachment_std__dlm/fields/rel_1788162147350_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1788162147350_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AiAgentSessionAttachment_std_AiAgent_rel</label>
    <referenceTo>ssot__AiAgentSession__dlm</referenceTo>
    <relationshipLabel>AiAgentSessionAttachment_std_AiAgent_rel</relationshipLabel>
    <relationshipName>rel_1788162147350_end</relationshipName>
    <type>Lookup</type>
</CustomField>